Removed GC optimization to fix #236
Note that package installation was creating default values for those options, so this has been removed as well to keep coherence.