@@ -32,13 +32,9 @@ CHECK_JAVA=${CHECK_JAVA:-"true"}
 PSJAVA=${PSJAVA:-"ps aux | grep [j]ava"} 
 PSCMD="$JPS | grep -i jmxtrans | awk '{ print \$1 };'"
 JAVA_OPTS=${JAVA_OPTS:-"-Djava.awt.headless=true -Djava.net.preferIPv4Stack=true"}
-NEW_SIZE=${NEW_SIZE:-"64"}
-NEW_RATIO=${NEW_RATIO:-"8"}
 HEAP_SIZE=${HEAP_SIZE:-"512"}
 PERM_SIZE=${PERM_SIZE:-"384"}
 MAX_PERM_SIZE=${MAX_PERM_SIZE:-"384"}
-CPU_CORES=${CPU_CORES:-"1"}
-IO_FRACTION=${IO_FRACTION:-"85"}
 JMX_PORT=${JMX_PORT:-"2101"}
 LOG_LEVEL=${LOG_LEVEL:-"debug"}
 CONTINUE_ON_ERROR=${CONTINUE_ON_ERROR:-"false"}
@@ -46,7 +42,7 @@ JMXTRANS_OPTS="$JMXTRANS_OPTS -Djmxtrans.log.level=${LOG_LEVEL} -Djmxtrans.log.d
 
 
 MONITOR_OPTS=${MONITOR_OPTS:-"-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=${JMX_PORT}"}
-GC_OPTS=${GC_OPTS:-"-Xms${HEAP_SIZE}M -Xmx${HEAP_SIZE}M -XX:+UseConcMarkSweepGC -XX:NewRatio=${NEW_RATIO} -XX:NewSize=${NEW_SIZE}m -XX:MaxNewSize=${NEW_SIZE}m -XX:MaxTenuringThreshold=16 -XX:GCTimeRatio=9 -XX:PermSize=${PERM_SIZE}m -XX:MaxPermSize=${MAX_PERM_SIZE}m -XX:+UseTLAB -XX:CMSInitiatingOccupancyFraction=${IO_FRACTION} -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:ParallelGCThreads=${CPU_CORES} -Dsun.rmi.dgc.server.gcInterval=28800000 -Dsun.rmi.dgc.client.gcInterval=28800000"}
+GC_OPTS=${GC_OPTS:-"-Xms${HEAP_SIZE}m -Xmx${HEAP_SIZE}m -XX:PermSize=${PERM_SIZE}m -XX:MaxPermSize=${MAX_PERM_SIZE}m"}
 
 if [ "${ADDITIONAL_JARS}" == "" ]; then
   ADDITIONAL_JARS_OPTS=""
